# fastapi_example

./: .gitignore  Dockerfile  Dockerfile.dockerignore  alembic.ini  dist.env  docker-compose.yaml  makefile  pyproject.toml
app/: lifespan.py  main.py
app/apps/consumers/: exchanges.py  queues.py  schemas.py  user_creation_consumer.py
app/apps/genres/: models.py  repository.py  routes.py  schemas.py
app/apps/genres/services/: service.py
app/apps/health_check/: routes.py
app/apps/users/: models.py  repository.py  routes.py  schemas.py
app/apps/users/services/: service.py
app/apps/users/use_cases/: register_user.py
app/core/: aws_boto_clients.py  config.py  database.py  enums.py  schemas.py
app/core/infrastructure/brokers/: dependencies.py  rabbit_broker.py
app/core/repositories/: base_repository.py
app/core/services/: s3_storage.py  ses.py
migrations/: env.py
migrations/versions/: 2025-02-09-14-35_init.py  2025-02-15-17-22_users.py
tests/: conftest.py  dependencies.py
tests/api/: test_genres.py  test_users.py
tests/factory_helpers/: factories_creators.py
tests/factory_models/: factories.py
tests/services/: test_s3_storage.py
