[project]
authors = [
    {name = "Illia Troshchynskyi"},
]
name = "fastapi-example"
version = "0.1.0"
description = ""
readme = "README.md"

requires-python = "<4.0,>=3.12"

dependencies = [
    "fastapi[standard]<1.0.0,>=0.115.6",
    "pydantic-settings<3.0.0,>=2.7.1",
    "psycopg[binary]>=3.2.4,<4.0.0",
    "alembic<2.0.0,>=1.14.0",
    "python-multipart<1.0.0,>=0.0.20",
    "fastapi-pagination<1.0.0,>=0.12.34",
    "aiobotocore==2.11.0",
    "types-aiobotocore[s3]<3.0.0,>=2.19.0",
]

[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.0.1",
    "coverage<8.0.0,>=7.6.10",
    "pytest<9.0.0,>=8.3.4",
    "pytest-asyncio<1.0.0,>=0.25.2",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-httpx<1.0.0,>=0.35.0",
    "polyfactory<3.0.0,>=2.18.1",
    "ruff<1.0.0,>=0.9.2",
    "testcontainers<5.0.0,>=4.9.1",
    "minio<8.0.0,>=7.2.15",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "I", # isort
    "T20", # flake8-print
]
pydocstyle.convention = 'google'

[tool.ruff.lint.isort]
known-local-folder = ["tests", "app", "scripts"]
split-on-trailing-comma = true
combine-as-imports = true
case-sensitive = false
detect-same-package = true
order-by-type = false  # Sorting of all imported objects (functions, classes, etc.) regardless of their type
force-sort-within-sections = true  # Don't sort straight-style imports before from-style imports.
